samples/_failures_safe/1761378318_f9b133_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbee9b6a.c: In function ‘main’:
./samples/SAFE/__tmp_cbee9b6a.c:177:24: error: missing terminating " character
  177 |                 printf("Invalid choice. Please enter 1, 2
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cbee9b6a.c:177:17: error: expected expression at end of input
  177 |                 printf("Invalid choice. Please enter 1, 2
      |                 ^~~~~~
./samples/SAFE/__tmp_cbee9b6a.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbee9b6a.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cbee9b6a.c:177:17: error: expected declaration or statement at end of input
